# ECE414_Sam_Sam_David

./: led_out.c  sw_in.c  sw_in.h  ts_test.c
Final Project/ECE414_Final_Proj/Unit_tests/: CMakeLists.txt  FSR_read.c  FSR_read.h  debounce_sw1.h  inputs.c  inputs.h  leds.c  leds.h  main.c  setting_control.c  setting_control.h  sw_in.c  sw_in.h  synth_chip.c  synth_chip.h  unit_tests.c
Lab3/: CMakeLists.txt  Lab3.c  debounce_sw1.c  debounce_sw2.c  debounce_sw2.h  led_out.h  sw_in.c  unit_tests.c
Lab3/debounce_sw1_sw2/: debounce_sw2.c  sw_in.c
Lab3/uart_demo/: CMakeCache.txt  Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/docs/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/boot_stage2/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
Lab3/uart_demo/pico-sdk/tools/: Makefile  cmake_install.cmake
Lab4/: CMakeLists.txt  Lab4.c  TFTMaster.c  TouchScreen.c  pico_sdk_import.cmake  pio_enums.h  ts_lcd.c  ts_lcd.h  ts_test.c  unit_tests.c
Lab4/sch/Lab4Schematic/: #auto_saved_files#  Lab4Schematic.kicad_pro  Lab4Schematic.kicad_sch
Lab5/: CMakeLists.txt  TFTMaster.c  TouchScreen.c  TouchScreen.h  calc.c  draftdraft_scratchpaper.c  ts_lcd.c  ts_lcd.h  unit_tests.c  user_interface.c  user_interface.h
(+167 files in other folders)
